Fix SonarQube and linter warnings: remove unused imports, fix deprecated methods, improve code quality